--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script>
     window._6si = [];
   </script>
-  <script src="https://jqa.6sc.co/preloader/1.0.0/6si-preloader.min.js" integrity="sha384-xnkdsxw4fSB6tBPMtPGVS/LIvEH3if+gaqggROUF0eRS3m9ud1BalQa+dawf5NnY" />
+  <script src="https://jqa.6sc.co/preloader/1.0.0/6si-preloader.min.js" integrity="sha384-xnkdsxw4fSB6tBPMtPGVS/LIvEH3if+gaqggROUF0eRS3m9ud1BalQa+dawf5NnY"></script>
   </head>
   <body>
     Test
