--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <script>
     window._6si = [];
   </script>
-  <script src="https://jqa.6sc.co/preloader/1.0.0/6si-preloader.min.js" integrity="sha384-xnkdsxw4fSB6tBPMtPGVS/LIvEH3if+gaqggROUF0eRS3m9ud1BalQa+dawf5NnY"></script>
+  <script src="https://jqa.6sc.co/preloader/1.0.0/6si-preloader.min.js" integrity="sha384-xnkdsxw4fSB6tBPMtPGVS/LIvEH3if+gaqggROUF0eRS3m9ud1BalQa+dawf5NnY" crossorigin="anonymous">
+  </script>
   </head>
   <body>
     Test
-    </body>
-    </html>
+  </body>
+  </html>
     
